--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,19 @@
 {
-    "name": "dbe/markdown",
+    "name": "dinandmentink/nova-markdown",
     "description": "A Laravel Nova field.",
-    "keywords": [
-        "laravel",
-        "nova"
-    ],
+    "keywords": ["laravel", "nova"],
     "license": "MIT",
     "require": {
         "php": ">=7.1.0"
     },
     "autoload": {
         "psr-4": {
-            "Dbe\\Markdown\\": "src/"
+            "DinandMentink\\Markdown\\": "src/"
         }
     },
     "extra": {
         "laravel": {
-            "providers": [
-                "Dbe\\Markdown\\FieldServiceProvider"
-            ]
+            "providers": ["DinandMentink\\Markdown\\FieldServiceProvider"]
         }
     },
     "config": {
