--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "cross-env": "^5.2.0",
-        "laravel-mix": "^4.0.14",
+        "cross-env": "^5.0.0",
+        "laravel-mix": "^1.0",
         "laravel-nova": "^1.0",
-        "resolve-url-loader": "3.1.0",
-        "sass": "^1.22.6",
-        "sass-loader": "7.*",
-        "simplemde": "^1.11.2",
-        "vue-template-compiler": "^2.6.10"
+        "simplemde": "^1.11.2"
     },
     "dependencies": {
         "vue": "^2.5.0"
