--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "cross-env": "^5.0.0",
+        "cross-env": "^7.0",
+        "easymde": "^2.10",
         "laravel-mix": "^1.0",
-        "laravel-nova": "^1.0",
-        "simplemde": "^1.11.2"
+        "laravel-nova": "^1.2.2"
     },
     "dependencies": {
-        "vue": "^2.5.0"
+        "vue": "^2.6.11"
     }
 }
