--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "devDependencies": {
         "cross-env": "^7.0",
         "easymde": "^2.10",
-        "laravel-mix": "^1.0",
-        "laravel-nova": "^1.2.2"
+        "laravel-mix": "^5.0",
+        "laravel-nova": "^1.2",
+        "resolve-url-loader": "^3.1",
+        "sass": "^1.30",
+        "sass-loader": "^10.0",
+        "vue-template-compiler": "^2.6"
     },
     "dependencies": {
-        "vue": "^2.6.11"
+        "vue": "^2.6"
     }
 }
