--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "cross-env": "^7.0",
-        "easymde": "^2.10",
-        "laravel-mix": "^5.0",
-        "laravel-nova": "^1.2",
-        "resolve-url-loader": "^3.1",
-        "sass": "^1.30",
-        "sass-loader": "^10.0",
-        "vue-template-compiler": "^2.6"
-    },
-    "dependencies": {
-        "jquery": "^3.5.1",
-        "vue": "^2.6"
-    }
+  "private": true,
+  "scripts": {
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "production": "mix --production"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0",
+    "easymde": "^2.10",
+    "laravel-mix": "^6.0",
+    "laravel-nova": "^1.2",
+    "postcss": "^8.1",
+    "resolve-url-loader": "^4.0",
+    "sass": "^1.30",
+    "sass-loader": "^11.0",
+    "vue-loader": "^15.9.5",
+    "vue-template-compiler": "^2.6"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1",
+    "vue": "^2.6"
+  }
 }
