--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "easymde": "^2.10",
     "laravel-mix": "^6.0",
     "laravel-nova": "^1.2",
+    "markdown-it": "^12.2.0",
     "postcss": "^8.1",
     "resolve-url-loader": "^4.0",
     "sass": "^1.30",
