--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
         "illuminate/support": "^9.0",
         "spatie/image": "^2.0"
     },
+    "require-dev": {
+        "laravel/nova": "^4.0"
+    },
     "autoload": {
         "psr-4": {
             "DinandMentink\\Markdown\\": "src/"
@@ -39,5 +42,11 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
+    ]
 }
