--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "production": "mix --production"
   },
   "devDependencies": {
+    "@inertiajs/inertia": "^0.11.0",
+    "@vue/babel-plugin-jsx": "^1.1.1",
+    "@vue/compiler-sfc": "^3.2.33",
     "easymde": "^2.10",
-    "laravel-mix": "^6.0",
-    "laravel-nova": "^1.2",
+    "form-backend-validation": "^2.4.0",
+    "laravel-mix": "^6.0.41",
     "markdown-it": "^12.3.2",
-    "postcss": "^8.1",
-    "resolve-url-loader": "^4.0",
-    "sass": "^1.30",
-    "sass-loader": "^12.0",
-    "vue-loader": "^15.9.5",
-    "vue-template-compiler": "^2.6"
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.50.0",
+    "sass-loader": "^12.1.0",
+    "vue-loader": "^16.2.0",
+    "vuex": "^4.0.2"
   },
   "dependencies": {
-    "jquery": "^3.5.1",
-    "vue": "^2.6"
+    "jquery": "^3.5"
   }
 }
