--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "php": ">=7.4",
         "illuminate/support": "^9.0",
         "spatie/image": "^2.0",
-        "laravel/nova": "^4.0"
+        "laravel/nova": "^4.0",
+        "nova-kit/nova-packages-tool": "^1.0"
     },
     "autoload": {
         "psr-4": {
