--- a/.github/workflows/update-assets.yml
+++ b/.github/workflows/update-assets.yml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Compile Asset
         run: |
-          npm install
-          npm run prod
+          yarn install
+          yarn run production
         env:
           TAILWIND_MODE: build
 
