🫡 EOL Nova Markdown
With the upcoming laravel 11 release it's time to eol this package. People are encouraged to use the default nova markdown field.

Thanks for using this package.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "dinandmentink/nova-markdown",
     "description": "A Laravel Nova Markdown Field.",
+    "abandoned": true,
     "keywords": [
         "laravel",
         "nova",
